sf-backwoods/objects/Investment_Idea__c/Investment_Idea__c.object-meta.xml
<CustomObject>
    <description>A possible thing to invest time and effort into.</description>
    <label>Investment Idea</label>
    <nameField>
        <label>Investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>