sf-backwoods/objects/Investment_Idea__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>ROI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Break Even</fullName>
            </value>
            <value>
                <fullName>Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>