sf-backwoods/objects/Investment_Idea__c/fields/Treasure_Chest__c.field-meta.xml
<CustomField>
    <fullName>Treasure_Chest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Determines the available time investment values for selection.</description>
    <label>Treasure Chest</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Investment Ideas</relationshipLabel>
    <relationshipName>Investment_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>