sf-backwoods/objects/Investment_Idea__c/recordTypes/Level_1.recordType-meta.xml
<RecordType>
    <fullName>Level_1</fullName>
    <active>true</active>
    <label>Level 1</label>
</RecordType>