sf-backwoods/objects/Investment_Idea__c/recordTypes/Level_2.recordType-meta.xml
<RecordType>
    <fullName>Level_2</fullName>
    <active>true</active>
    <label>Level 2</label>
</RecordType>