sf-backwoods/objects/Investment_Idea__c/recordTypes/Level_4.recordType-meta.xml
<RecordType>
    <fullName>Level_4</fullName>
    <active>true</active>
    <label>Level 4</label>
</RecordType>