sf-backwoods/objects/Investment_Idea__c/recordTypes/Level_5.recordType-meta.xml
<RecordType>
    <fullName>Level_5</fullName>
    <active>true</active>
    <label>Level 5</label>
</RecordType>