sf-backwoods/objects/Investment_Idea__c/recordTypes/Level_6.recordType-meta.xml
<RecordType>
    <fullName>Level_6</fullName>
    <active>true</active>
    <label>Level 6</label>
</RecordType>