sf-backwoods/objects/Investment_Idea__c/recordTypes/Level_7.recordType-meta.xml
<RecordType>
    <fullName>Level_7</fullName>
    <active>true</active>
    <label>Level 7</label>
</RecordType>