sf-backwoods/objects/Investment_Idea__c/recordTypes/Level_9.recordType-meta.xml
<RecordType>
    <fullName>Level_9</fullName>
    <active>true</active>
    <label>Level 9</label>
</RecordType>